Fixed game width on Mobile

--- a/static/styles/gameStyles.css
+++ b/static/styles/gameStyles.css
@@ -1,5 +1,6 @@
 body {
   background-color: blue;
+  width:400px;
 }
 
 p {
